--- a/index.html
+++ b/index.html
@@ -1,9 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/main.css" />
+    <script src="scripts/script.js" defer></script>
     <title>Page Builder</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="column-layout">
+        <aside class="column-layout__sidebar">
+          <h1>בונה מסכים</h1>
+          <form class="form">
+            <label for="bg-color">בחר צבע רקע</label>
+            <input type="color" name="bg-color" id="bgColor" />
+            <label for="elm-width">רוחב האלמנט</label>
+            <input type="number" name="elm-width" id="elmWidth" />
+            <label for="elm-height">רוחב האלמנט</label>
+            <input type="number" name="elm-height" id="elmHeight" />
+            <label for="content">תוכן</label>
+            <textarea
+              name="content"
+              id="content"
+              cols="30"
+              rows="10"
+            ></textarea>
+            <label for="font-color">צבע גופן</label>
+            <input type="color" name="font-color" id="fontColor" />
+            <label for="font-size">גודל גופן</label>
+            <select name="font-size" id="fontSize">
+              <option value="Arial">Arial</option>
+              <option value="Verdana">Verdana</option>
+              <option value="Tahoma">Tahoma</option>
+            </select>
+
+            <div class="form__send">
+              <button class="btn" id="btnSend">שליחה</button>
+              <button class="btn" id="btnSave">שמירה</button>
+            </div>
+          </form>
+        </aside>
+        <div class="column-layout__page"></div>
+      </div>
+    </main>
+  </body>
 </html>
